# cpp-bazel

./: .bazelrc  .pre-commit-config.yaml  Doxyfile  README.md  WORKSPACE.bazel  bazel-bin  bazel-cpp-raven-main  bazel-out  bazel-testlogs
.devcontainer/: Dockerfile.vscode  devcontainer.json
ci/: check-buildifier.sh  ci_coverage.sh
protos/: BUILD.bazel
test/: BUILD.bazel  hello.cpp  hello.hpp  hello_test.cpp  main.cpp
